FIX: construction gif size in widget box on mobile devices

--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -146,4 +146,8 @@
   .welcomeBanner img {
     max-width: 100%;
   }
+
+  .widgetBox img {
+    max-width: 100%;
+  }
 }
